# ChangeLog for dev-java/netbeans-javacard
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/netbeans-javacard/ChangeLog,v 1.14 2012/05/30 06:12:44 johu Exp $

  30 May 2012; Johannes Huber <johu@gentoo.org> netbeans-javacard-7.1.2.ebuild:
  Stable for x86, wrt bug #417799

  28 May 2012; Agostino Sarubbo <ago@gentoo.org>
  netbeans-javacard-7.1.2.ebuild:
  Stable for amd64, wrt bug #417799

  07 May 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  netbeans-javacard-7.1.1.ebuild:
  x86 stable wrt bug #414387

  06 May 2012; Agostino Sarubbo <ago@gentoo.org>
  netbeans-javacard-7.1.1.ebuild:
  Stable for amd64, wrt bug #414387

*netbeans-javacard-7.1.2 (26 Apr 2012)

  26 Apr 2012; Miroslav Šulc <fordfrog@gentoo.org>
  +netbeans-javacard-7.1.2.ebuild:
  Version bump in 7.1 slot

*netbeans-javacard-7.1.1 (05 Mar 2012)

  05 Mar 2012; Miroslav Šulc <fordfrog@gentoo.org>
  -netbeans-javacard-7.1.ebuild, +netbeans-javacard-7.1.1.ebuild:
  Version bump

*netbeans-javacard-7.1 (06 Jan 2012)

  06 Jan 2012; Miroslav Šulc <fordfrog@gentoo.org>
  +netbeans-javacard-7.1.ebuild:
  Version bump

  25 Oct 2011; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-javacard-7.0.1.ebuild:
  Filtering ecj compilers as the package does not compile using them

  16 Sep 2011; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-javacard-7.0.1.ebuild:
  Building NetBeans is supported only with JDK 1.6

  22 Aug 2011; Miroslav Šulc <fordfrog@gentoo.org>
  -netbeans-javacard-7.0.ebuild:
  Removed obsolete version

*netbeans-javacard-7.0.1 (05 Aug 2011)

  05 Aug 2011; Miroslav Šulc <fordfrog@gentoo.org>
  +netbeans-javacard-7.0.1.ebuild:
  Version bump

*netbeans-javacard-7.0 (21 Apr 2011)

  21 Apr 2011; Miroslav Šulc <fordfrog@gentoo.org>
  -netbeans-javacard-7.0_rc2.ebuild, +netbeans-javacard-7.0.ebuild:
  Bumped to latest version

*netbeans-javacard-7.0_rc2 (08 Apr 2011)

  08 Apr 2011; Miroslav Šulc <fordfrog@gentoo.org>