@@ -2,9 +2,12 @@ DIST netbeans-7.0-build.xml-r1.patch.bz2 1344 SHA256 f323cb4694f6351fe47b76fa8b8
 DIST netbeans-7.0.1-201107282000-src.zip 175987235 SHA256 8bf4dd2375bc9fd02adf64ca9066118e0392a33428232ccf3f9091b96557b9aa SHA512 c2b4122d7bf8332455ac71d72e76d29bc31e13d892997e153ee1bb99a019f58bfc12179a24ab2bdaaf1c61ad823b7c24857523d0363ea6856b81a0aaef9d2eca WHIRLPOOL 296b51405e16e580101f15a459f4e07ec31ab353fec1e4c4d5ae79ff7d378e994291c7c378f380fbf83d1718366f38bbb3801834079db466a1c3bade099d7fd0
 DIST netbeans-7.1.1-201203012225-src.zip 172146133 SHA256 a8ff48a5837f7952cf305d70b511c4abb77d6f1639fc7de1578aac75274450d4 SHA512 e43d5477f6d6bc5471af4f7b624a806a88d34e9467ea6dc228dbbdb374e1bf073b96b3ab3c85a301207f6abb1ee6292c6fe1e859f78a620ff6654e5617b880c1 WHIRLPOOL 22e8d1c562d3702ccd0e66012819447c92fc7cc1c5f0c52ceb9f9990372b1f7b976b3b1b8e31bd1bfb96726fbb8963c4e444ff0fad931d75a8201d6dcb012bac
 DIST netbeans-7.1.2-201204101705-src.zip 172346251 SHA256 95df26a2eafdc88887a835b3abcf930fd0e72c1639c3e0bfceb9489e44c5865c SHA512 9470f00021fd401e33c9bb4871e40780f1775e0e41c6d0c28ee0ac157c3eede324703d0ed8b1cf14e22441a14ba82fdf72315d7135f55b2a8ffa75f935496f23 WHIRLPOOL ba64a70001e8a18080cc58279e3ba70f61b3ab2c51d2f0be81bec178610f9ff37d41a77d2d5f39e16a8c07e9a7931d1487f35054d2d5fa7e379bb8edab09fc1b
+DIST netbeans-7.2-201207171143-src.zip 174804170 SHA256 7fbbb9e2d3daa41344800a7571e94574aa54fb586b514095ec31b87f1dd4551a SHA512 7306039b30ebddf5766b8d938f1b69291e6bfa20ed54866d38a9832dba8a568e9b79577aea963dd36d93a4e0a5e487a64cf404720c5d62316307181f7e4a17e1 WHIRLPOOL fda3e9772c0f9b3b6abc65231c2642567711e3d72cf031625f3c47fed35343484b81e6897510a71410cd797a14d956af8d9ed336993753b7085c7303d8ab9e02
+DIST netbeans-7.2-r1-build.xml.patch.bz2 2476 SHA256 ba0812d86c8d77cc69c75899d5b070d8b8c7dd1e33b5bdc7ac6e166d5015601d SHA512 8d0a2d80afafe875d9872a0aa15b2ade41f174ae522bc0363021e8d490dfd43b09a97af9c77dd635b56964fb57fd218424c17de0a13b946d55247db06a3e8c33 WHIRLPOOL 3833520b791d6fcb3b531b4cb1fbeec2fbadcc05e8c8a439794ea83bfb315e538d6039d2a6a188735cd996e916a1e5e88871050392947a2f5702accf9fceb16a
 DIST netbeans-9999-r1-build.xml.patch.bz2 2379 SHA256 09cfedef0fd9d713ddc71a54848d7551ce750c15e3df00af7feef37d25260a7e SHA512 7f28a0b2536ea84ebaba26df072411f62db01873e7803f2e28400b55bd61f0857b5508668bd03894364333edf6b8cf9901b823980a8f51f8d6a711bd3a47cb59 WHIRLPOOL 74dcc47859101722f9879bf0cf2dadd210555560b2fcd036e43ac099c71fe0c712b360aadad8e88092a324c93ff42fc2e467e89e3227f23a24d55b9c9e2c27b6
 EBUILD netbeans-websvccommon-7.0.1.ebuild 2821 SHA256 16a99fa0f7117c8e6d2964beb93539391d91d71ea13aee79b8074d2e7eb8be0e SHA512 6dfcd5dde1926844549e6b7317ad7ee02c7a362712777893dfd558802247907120ffd3c7970359a07aec07cc3c9297c0b4e7360bcab60aa583556b72f39c9604 WHIRLPOOL 38bce71be87ddbc6444a43f391ec0d209fa00acfade12ab56ad8ffcb8ec131f3cd4958ae5195ab789cc2c3eff9e374f833462fd015a802d3eda6b78e9f639d35
 EBUILD netbeans-websvccommon-7.1.1.ebuild 2830 SHA256 c1683dbabab24dc19d34af598b99762f4e81817c0ce4d911a7b0ff02f701d679 SHA512 d95c47a99f5bb44baeeb308a05ca86d0094618cc4c7bd34241239761ee041ec3ce2b22908a388c334446b73ef5197cc55144658bea8e53e34971d439d79a6ec6 WHIRLPOOL 811ed72e7b72c805ace78ee9a3318538938dd01344669f88e453ee7ee30eea80a1c858287e4bb3b6ee7ddf2150869be0488c95946e090e544b567583c649cbd6
 EBUILD netbeans-websvccommon-7.1.2.ebuild 2824 SHA256 319c6531634ac5dea1a77ac64d67a38534b86a67f82bcda653c8bf98296fb24e SHA512 c12bcdcec71ca25d08172ad795ac4778842a88ca78792c57bbc41004bfe53bdf59fb6bb55d0cd167fb55be11f09d59fa6950a6f48a566a0b878f0cc8d473bb63 WHIRLPOOL 50e47f43eac18aa5f8306e169ff539d931a805c8e9132f9221ecb5816e613f7f3d9e414ba980ba372fdb9309bfbfbe0b3f3ebc4fd1902993ce364a7722472ea9
-MISC ChangeLog 2357 SHA256 b75a829fad002001d74cfb998da2c8653a18aad14ca9d8a338d26c7bd4f97281 SHA512 16b5bf2807cf3bdb88c1078d07d8be012eb18529a87a79e94e749dd71e90b2d6c986f0726f9a386d34185e13baa6485fb606f4e570b04aa287c9915548960a1d WHIRLPOOL 601056fe4c002f994d179360a216600a02f4bf6634a7b11e5785bbeaae26d2b815f613e6f4afaf5978d0559732839d83f2a66ea6e5ae49b1c757aee1a6f9f8ad
+EBUILD netbeans-websvccommon-7.2.ebuild 2811 SHA256 55e04c98a0f7ffb2c15b5b74e11ca9b2f7e42e89a601ab04d0662ce538f3de62 SHA512 ac8849706573b526c95aa8aebf5dfd4a31f735f89bc4c91ef4e5b62c422f2b19a57e34c088ba433be2b756a4ccdab50261aed6526459a277dcfa1541c9a1256a WHIRLPOOL d4059a89043991bab1e7349749749635ea67cef951b8a52d99b8f1fb04108a09c56c3b847c14dbaf360dbe6cbd312c248fe21f166874430194846a87a23ff4eb
+MISC ChangeLog 2516 SHA256 1cc5ebf9e7f35fb6bafb5f2189d1238de3b07518aa7cf712733069f9c5c50792 SHA512 bab8b8409c2cd0a7bb1cd95fa59e1cc103673db6aff561bcce24a127e09225d27bc5f8a2531f5ddb0212c93ef8f9eb68c1b326477d074dec01f70b66cba3cf7c WHIRLPOOL 9052792bc3e1fdd8a1f9abc61dc89ec70cc82221005ac0c7a70b60cc25c07e2d2230c4210520f0262cef834c028694dc94dac24ab958ab095e6863f512b8ccd7
 MISC metadata.xml 251 SHA256 5a4ff53a9862390a48d45c79be24086646e7a6ff0c5bdf0fcb799d0871299003 SHA512 04153cbd9776ad56a94d6a47d043df15d082d8888df8658f18d0d4b659c6c0526ab3a9b22ccbe2471091bf2d8165f224854bc99c51f3664aaf350ccb93532a7c WHIRLPOOL 2ee8a646c6e23bc46c72cac0ecb5cfe43720ec42404ddaeed8ab1b59d139b3d5c1a94764de847f979da978c001c9f02f709d663a68eeea64d19e88f1fefbca43
