@@ -1,6 +1,12 @@
 # ChangeLog for dev-java/netbeans-javacard
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/netbeans-javacard/ChangeLog,v 1.14 2012/05/30 06:12:44 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/netbeans-javacard/ChangeLog,v 1.15 2012/07/25 16:07:00 fordfrog Exp $
+
+*netbeans-javacard-7.2 (25 Jul 2012)
+
+  25 Jul 2012; Miroslav Šulc <fordfrog@gentoo.org>
+  +netbeans-javacard-7.2.ebuild:
+  netbeans 7.2 release
 
   30 May 2012; Johannes Huber <johu@gentoo.org> netbeans-javacard-7.1.2.ebuild:
   Stable for x86, wrt bug #417799
